Changes for 2.0.8rc1

New features:
...G...PS. [ZBXNEXT-1405] added IP to the warning about ignored messages because of their size (wiper)
A.F....... [ZBX-1357] updated Dutch translation; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...... [ZBX-6672] fixed windows agent performance counters being capped to 100 (wiper)
....I..... [ZBX-6831] fixed webtest item conversion in 1.8->2.0 database upgrade patch for mysql (wiper)
...G...... [ZBX-6527] fixed proc.mem calculations with getprocs() for AIX (wiper)
........S. [ZBX-5924] fixed curl verify host option setting in ez texting (wiper)
.......PS. [ZBX-6798] improved error messages from UnixODBC library for Database Monitor items (Andris)
.......PS. [ZBX-6797] added configurable ODBC login timeout (Andris)

--------------------------------------------------------------------------------
Changes for 2.0.7

2.0.7rc1 was released as 2.0.7 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.7rc1

New features:
........S. [ZBX-6708] reduced configuration locking when calculating item queue (wiper)
.......PS. [ZBX-6683] removed string pool semaphore; increased configuration cache update performance (Sasha)
A......... [ZBX-6603] improved CTrigger lastEvents parameter performance (Toms)
A......... [ZBX-6603] improved performance for dbConditionInt() function (Toms)
A......... [ZBX-6407] improved data retrieval performance for CTrigger get() with post SQL filtering (Toms)
........S. [ZBX-6493] improved performance when working with Oracle by changing memory based prefetch to rows based (dimir)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Chinese (China), Latvian, Polish, Slovak, Spanish and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
.......PS. [ZBX-6819] fixed memory leak in snmp trapper regular expression processing (wiper)
..F....... [ZBX-6464] fixed item display in popup for simple graphs and plain text items (Ivo)